<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#BDC198"
    tools:context=".ui.remolachagame.victory.VictoryActivity">

    <ImageView
        android:id="@+id/gif"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/tvAchieve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_100"
        android:fontFamily="@font/fuente"
        android:text="@string/lo_conseguiste_text"
        android:textAlignment="center"
        android:textColor="@color/instructions"
        android:textSize="@dimen/dimen_80"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24"
        android:fontFamily="@font/fuente"
        android:text="@string/dios_remolachas_text"
        android:textAlignment="center"
        android:textColor="@color/new_easy_game_text"
        android:textSize="@dimen/dimen_60"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAchieve" />

    <Button
        android:id="@+id/btnHomeScreen"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24"
        android:fontFamily="@font/fuente"
        android:text="@string/volver_al_menu_principal_text"
        android:textAlignment="center"
        android:textColor="@color/new_difficult_game"
        android:textSize="@dimen/dimen_36"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage" />



</androidx.constraintlayout.widget.ConstraintLayout>