<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".remolachagame.instructions.InstructionsFragment">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:background="@drawable/fondo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_12">

            <TextView
                android:id="@+id/tvHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fuente"
                android:text="@string/textview_instructions_history"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/dimen_24"
                android:textColor="@color/instructions"
                android:textSize="@dimen/dimen_26"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEasyMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12"
                android:fontFamily="@font/fuente"
                android:text="@string/textview_instructions_easy_mode"
                android:textAlignment="center"
                android:textColor="@color/new_easy_game_text"
                android:textSize="@dimen/dimen_26"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDifficultMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12"
                android:fontFamily="@font/fuente"
                android:text="@string/textview_instructions_difficult_mode"
                android:textAlignment="center"
                android:textColor="@color/new_difficult_game"
                android:textSize="@dimen/dimen_26"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>