<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.remolachagame.homescreen.HomeScreenActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/remolacha_home_screen_bg"
        android:scaleType="centerCrop"
        android:alpha="0.4"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Remolacha Hero"
        android:fontFamily="@font/fuente"
        android:textSize="@dimen/dimen_80"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_24"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_margin="@dimen/dimen_6"
        android:paddingVertical="@dimen/dimen_24">

        <Button
            android:id="@+id/btnNewEasyGame"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fuente"
            android:text="@string/nueva_partida_facil_text"
            android:textAlignment="center"
            android:textColor="@color/new_easy_game_text"
            android:textSize="@dimen/dimen_42"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnNewDifficultGame"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12"
            android:fontFamily="@font/fuente"
            android:text="@string/nueva_partida_dificil_text"
            android:textAlignment="center"
            android:textColor="@color/new_difficult_game"
            android:textSize="@dimen/dimen_42"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNewEasyGame" />

        <Button
            android:id="@+id/btnInstructions"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_12"
            android:fontFamily="@font/fuente"
            android:text="@string/instrucciones_text"
            android:textAlignment="center"
            android:textColor="@color/instructions"
            android:textSize="@dimen/dimen_42"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnNewDifficultGame" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>