<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.remolachagame.gameover.DifficultGameOverActivity">

    <ImageView
        android:id="@+id/gif"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/granjerobaile" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_12">

        <TextView
            android:id="@+id/tvGameOver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_36"
            android:fontFamily="@font/fuente"
            android:text="@string/game_over_text"
            android:textAlignment="center"
            android:textColor="@color/instructions"
            android:textSize="@dimen/dimen_60"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:fontFamily="@font/fuente"
            android:textAlignment="center"
            android:textColor="@color/score"
            tools:text="Has conseguido 36 remolachas"
            app:layout_constraintTop_toBottomOf="@id/tvGameOver"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/dimen_60"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnRestart"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fuente"
            android:text="@string/reintentar_text"
            android:textAlignment="center"
            android:textColor="@color/new_easy_game_text"
            android:textSize="@dimen/dimen_36"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dimen_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvScore" />

        <Button
            android:id="@+id/btnHomeScreen"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24"
            android:fontFamily="@font/fuente"
            android:text="@string/volver_al_menu_principal_text"
            android:textAlignment="center"
            android:textColor="@color/new_difficult_game"
            android:textSize="@dimen/dimen_36"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRestart" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>